--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 		
 		<h1>I am the live site</h1>
 		
-		<img src="images/liam.jpg" alt="liam!" />
+		<p>I think we should get rid of Liam</p>
 				
 		
 	</body>
