Added some more text

--- a/here-comes-a-new-feature.htm
+++ b/here-comes-a-new-feature.htm
@@ -12,6 +12,8 @@
 		<h1>I am the live site</h1>
 		
 		<p>I think we should get rid of Liam</p>
+		
+		<p>So, yeh, I added this on another branch</p>
 				
 		
 	</body>
