New feature thingy

--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,8 @@
 		<h1>I am the live site</h1>
 		
 		<p>I think we should get rid of Liam</p>
+		
+		<p>Take a look at our <a href="some-new-feature/new-feature.htm">brand new feature!</a></p>
 				
 		
 	</body>
