--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,8 @@
 		
 		<h1>I am the live site</h1>
 		
+		<p>So here's a change that happened along the way</p>
+		
 		<p>I think we should get rid of Liam</p>
 				
 		
