--- a/index.htm
+++ b/index.htm
@@ -14,6 +14,10 @@
 		<p>So here's a change that happened along the way</p>
 		
 		<p>I think we should get rid of Liam</p>
+		
+		<h2>Ok, here comes a second change</h2>
+		
+		<p>Oh yeh</p>
 				
 		
 	</body>
