--- a/this-thing-was-added-during-6-dev.htm
+++ b/this-thing-was-added-during-6-dev.htm
@@ -3,3 +3,5 @@ This is SEVEN
 So along the way this thing was added.
 
 My 6 branch won't have this on...
+
+But you know, life isn't easy and there is SO much dev going on...
