Update homepage on bugfix1

--- a/index.htm
+++ b/index.htm
@@ -3,3 +3,5 @@
 <p><a href="crapsticks.htm">crapsticks</a></p>
 
 <p>Soon, I may commit a terrible offence</p>
+
+<p>I'm going to make an amendment here on the branch bugfix1</p>
