Homepage update on bugfix2

--- a/index.htm
+++ b/index.htm
@@ -3,3 +3,5 @@
 <p><a href="crapsticks.htm">crapsticks</a></p>
 
 <p>Soon, I may commit a terrible offence</p>
+
+<p>This is made on bugfix2 so I *think* may cause a conflict jobber</p>
