--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <h1>Hello world</h1>
 
 <p>Here we go again.</p>
+
+<p>So the question is whether this auto deploys? Or if I need to kick it off...?</p>
