--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Rainbow Grid COME ON BABY</title>
+	<title>Rainbow Grid FUCK</title>
 	<style>
 		body{
 			margin:0px;
